istio-nginx-colores/nginx-color-fixed-green.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-fixed-green
spec:
  hosts:
  - "*"
  gateways:
  - nginx-color-gateway
  http:
  - match:
    - uri:
        prefix: /app
    route:
    - destination:
        host: nginx
        port:
          number: 80
        subset: green
