istio-nginx-colores/nginx-color-percentage-of-use.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-color-weight
spec:
  hosts:
  - "*"
  gateways:
  - nginx-color-gateway
  http:
  - match:
    - uri:
        prefix: /app
    route:
    - destination:
        host: nginx
        port:
          number: 80
        subset: red
      weight: 90
    - destination:
        host: nginx
        port:
          number: 80
        subset: green
      weight: 10
